[package]
name = "solana-test-helpers"
description = "A set of solana test utilities"
version = "0.1.1"
authors = ["Konstantin Stepanov <konstantin.s@p2p.org>"]
repository = "https://github.com/p2p-org/solana-test-helpers.git"
keywords = ["solana", "test", "util"]
categories = ["development-tools::testing"]
license = "MIT"
edition = "2018"

[dependencies]
subprocess = "0.2.6"
log = "0.4.14"
solana-sdk = "1.6"
solana-client = "1.6"
anyhow = "1.0.40"
