[package]
name = "solana-test-helpers"
description = "A set of solana test utilities"
version = "0.2.0"
authors = [
    "Konstantin Stepanov <konstantin.s@p2p.org>",
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
repository = "https://github.com/p2p-org/solana-test-helpers.git"
keywords = ["solana", "test", "util"]
categories = ["development-tools::testing"]
license = "MIT"
edition = "2021"

[dependencies]
subprocess = "0.2"
log = "0.4"
solana-sdk = "1.9"
solana-client = "1.9"
anyhow = "1.0"
